@@ -74,6 +74,7 @@ S3method(makeRLearner,classif.mda)
 S3method(makeRLearner,classif.multinom)
 S3method(makeRLearner,classif.naiveBayes)
 S3method(makeRLearner,classif.nnet)
+S3method(makeRLearner,classif.nodeHarvest)
 S3method(makeRLearner,classif.plr)
 S3method(makeRLearner,classif.plsDA)
 S3method(makeRLearner,classif.plsdaCaret)
@@ -115,6 +116,7 @@ S3method(makeRLearner,regr.lm)
 S3method(makeRLearner,regr.mars)
 S3method(makeRLearner,regr.mob)
 S3method(makeRLearner,regr.nnet)
+S3method(makeRLearner,regr.nodeHarvest)
 S3method(makeRLearner,regr.pcr)
 S3method(makeRLearner,regr.penalized.lasso)
 S3method(makeRLearner,regr.penalized.ridge)
@@ -195,6 +197,7 @@ S3method(predictLearner,classif.mda)
 S3method(predictLearner,classif.multinom)
 S3method(predictLearner,classif.naiveBayes)
 S3method(predictLearner,classif.nnet)
+S3method(predictLearner,classif.nodeHarvest)
 S3method(predictLearner,classif.plr)
 S3method(predictLearner,classif.plsDA)
 S3method(predictLearner,classif.plsdaCaret)
@@ -235,6 +238,7 @@ S3method(predictLearner,regr.lm)
 S3method(predictLearner,regr.mars)
 S3method(predictLearner,regr.mob)
 S3method(predictLearner,regr.nnet)
+S3method(predictLearner,regr.nodeHarvest)
 S3method(predictLearner,regr.pcr)
 S3method(predictLearner,regr.penalized.lasso)
 S3method(predictLearner,regr.penalized.ridge)
@@ -357,6 +361,7 @@ S3method(trainLearner,classif.mda)
 S3method(trainLearner,classif.multinom)
 S3method(trainLearner,classif.naiveBayes)
 S3method(trainLearner,classif.nnet)
+S3method(trainLearner,classif.nodeHarvest)
 S3method(trainLearner,classif.plr)
 S3method(trainLearner,classif.plsDA)
 S3method(trainLearner,classif.plsdaCaret)
@@ -397,6 +402,7 @@ S3method(trainLearner,regr.lm)
 S3method(trainLearner,regr.mars)
 S3method(trainLearner,regr.mob)
 S3method(trainLearner,regr.nnet)
+S3method(trainLearner,regr.nodeHarvest)
 S3method(trainLearner,regr.pcr)
 S3method(trainLearner,regr.penalized.lasso)
 S3method(trainLearner,regr.penalized.ridge)
