@@ -27,12 +27,14 @@ mlr_2.3:
 
 - new learners:
 -- classif.extraTrees
+-- classif.nodeHarvest
 -- classif.randomUniformForest
 -- classif.xgboost
 -- regr.bartMachine
 -- regr.cubist
 -- regr.elmNN
 -- regr.extraTrees
+-- regr.nodeHarvest
 -- regr.randomUniformForest
 -- regr.xgboost
 -- surv.rpart
